css/app.css
 /* RESET RULES */
 * {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: sans-serif;
    position: relative;
}

img {
    max-width: 100%;
    display: block;
}

ul,
ol,
menu {
    list-style: none;
}

a {
    text-decoration: none;
    color: currentColor;
    display: inline-block;
}

p {
    line-height: 1.3em;
}

select {
    background-color: transparent;
    border: none;
}

* > h3 {
    font-size: 40px;
    margin-bottom: 65px;
}

* > h4 {
    font-size: 24px;
    margin-bottom: 27px;
}

/* COLOR PALETTE */
:root {
    --bg-blue: #0061FF;
    --bg-white: #FFFFFF;
    --bg-lightBlue: #B4D0E7;
    --bg-black: #000;
    --bg-wine: #61082B;
    --bg-green: #A2D39B;
    --bg-lightGrey: #F5F5F5;
    --border-lightGrey: #F5F5F5;
    --border-grey: #d8d8d8;
    --bg-darkBlue: #0D2481;
    --bg-red: #FF1C1C;
    --bg-darkRed: #D5001F;
    --bg-ocher: #FFD830;
    --text-white: #fff;
    --text-grey: #a6a6a6;
    --text-blue: #0061FF;
}

/* UTILITY CLASSES */

/* containers */
.container-sm {
    max-width: 1000px;
    margin: 0 auto;
}

.container-lg {
    max-width: 1200px;
    margin: 0 auto;
}

.container-fluid {
    max-width: 100%;
}

/* rows */
.row {
    display: flex;
    flex-wrap: wrap;
}

/* columns */
.col-2 {
    flex-basis: calc((100% / 12) * 2);
}
.col-4 {
    flex-basis: calc((100% / 12) * 4);
}
.col-5 {
    flex-basis: calc((100% / 12) * 5);
}
.col-6 {
    flex-basis: calc((100% / 12) * 6);
}
.col-7 {
    flex-basis: calc((100% / 12) * 7);
}
.col-8 {
    flex-basis: calc((100% / 12) * 8);
}
.col-12 {
    flex-basis: 100%;
}

.content-streched {
    min-height: 100%;
}

/* content flex positioning */
.justify-between {
    justify-content: space-between;
}

.align-center {
    align-items: center;
}

/* background color */
.bg-green {
    background-color: var(--bg-green);
}

.bg-blue {
    background-color: var(--bg-blue);
}

.bg-wine {
    background-color: var(--bg-wine);
}

.bg-red {
    background-color: var(--bg-red);
}

.bg-darkRed {
    background-color: var(--bg-darkRed);
}

.bg-darkBlue {
    background-color: var(--bg-darkBlue);
}

.bg-lightBlue {
    background-color: var(--bg-lightBlue);
}

.bg-ocher {
    background-color: var(--bg-ocher);
}

/* buttons */
.button {
    line-height: 30px;
    padding: 0 17px;
}

.button-bg-white {
    background-color: var(--bg-white);
}

.blue-btn {
    background-color: var(--bg-blue);
    color: var(--text-white);
}

.big-btn {
    line-height: 42px;
    margin-bottom: 34px;
}

/* margins and padding*/
.margin-bottom-55 {
    margin-bottom: 55px;
}

.padding-right-20 {
    padding-right: 20px;
}

.padding-right-left-10 {
    padding: 0 10px;
}

.padding-left-20 {
    padding-left: 20px;
}

/* hr */
.sm-separator {
    max-width: 50px;
    border: 1px solid var(--border-grey);
}

/* NAVBAR STYLING SECTION */
.page-header .navbar {
    padding: 20px 20px;
}

.page-header .navbar li {
    line-height: 30px;
}

.navbar .navbar__overview,
.navbar .navbar__interactions {
    display: flex;
    gap: 40px;
    align-items: center;
    font-size: 15px;
}

/* HERO STYLING SECTION */
.hero {
    background-color: var(--bg-lightBlue);
    padding: 100px 10px 0 10px;
}

.hero .hero__title {
    font-size: 70px;
    font-weight: 900;
}

.hero__description .down-arrow {
    font-size: 50px;
    font-weight: 900;
}

.hero__description .text-section {
    flex-grow: 1;
}

.hero__description .text-section p {
    margin-bottom: 35px;
}

.hero .row + .row {
    position: relative;
    top: 70px;
}

/* UP ARROW */
.back-to-top {
    position: fixed;
    bottom: 20px;
    right: 30px;
    background-color: var(--bg-white);
    aspect-ratio: 1 / 1;
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 50%;
    border: 3px solid var(--bg-blue);
    color: var(--bg-blue);
}

.back-to-top a {
    padding: 16px;
}

/* PAGE CONTENT >> BUSINESS PLAN BILLING OPTIONS */
.business-plan {
    padding: 150px 10px 50px 10px;
}

.business-plan__billing input[type="radio"] {
    transform: scale(1.3);
    margin-right: 2px;
}

.business-plan__billing span {
    display: inline-block;
    margin-right: 50px;
}

/* SUBSCRIPTIONS SECTION */
.subscriptions {
    padding: 0 10px 30px 10px;
}

.subscriptions .row.rowOne {
    margin-bottom: 50px;
}

.subscriptions__card {
    border: 2px solid var(--border-grey);
}

.subscriptions__card .card-category {
    text-align: center;
    padding: 10px 0;
}

.subscriptions__card .card-content {
    padding: 40px 30px;
    border-top: 2px solid var(--border-lightGrey);
}

.subscriptions__card .subscription-payment {
    font-size: 12px;
}

.subscription-payment li:last-child {
    font-size: 15px;
    color: var(--text-grey);
}

.subscription-payment li:first-child {
    margin-bottom: 17px;
}

.card-content .features {
    font-size: 15px;
}

.card-content .features li, .card-content .advantages li {
    display: flex;
    gap: 7px;
    margin-bottom: 25px;
}

.card-content .button {
    display: block;
    text-align: center;
}

.buyNow {
    color: var(--text-blue);
    text-decoration: underline;
}

.card-content .advantages li > .check {
    color: var(--text-blue);
}

.card-content .advantages::before {
    content: "Punti salienti del piano";
    font-weight: bold;
    display: block;
    margin-bottom: 30px;
}

.card-content.sales-office > p::before {
    content: "Contatta l'ufficio vendite per i prezzi";
    font-weight: bold;
    display: block;
    margin-bottom: 60px;
}

.card-content.contact-office {
    padding-left: 60px;
}

/* FIND A CONSULTANT SECTION */
.find-consultant {
    padding: 120px 10px;
}

.find-consultant .find-consultant__description{
    padding: 48px;
}

.find-consultant__description .button{
    border: 2px inset var(--bg-black);
}

.find-consultant__description p {
    margin-bottom: 30px;
}

/* DROPBOX BUSINESS STYLING */
.dropbox-business {
    padding: 40px 10px;
}

.dropbox-business .smart-card figure > img {
    padding-bottom: 10px;
}

/* ABOUT CUSTOMERS STYLING SECTION */
.about-customers {
    padding: 140px 10px;
}

/* COMPANIES STYLING SECTION */
.icon {
    filter: invert(100%);
}

.companies .company-logo:hover {
    box-shadow: inset 0px -1px 0px 17px rgba(255, 255, 255, 0.4);
    cursor: pointer;
}

.companies .col-2 > .company-logo {
    aspect-ratio: 1;
    display: flex;
    align-items: center;
    justify-content: center;
}

.companies .col-2 > .company-logo img {
    width: 50%;
}

.companies .col-4 > .company-logo {
    position: relative;
    margin-bottom: 90px;
}

.companies .col-4 > .company-logo img {
    width: 50%;
}

.companies .col.col-4 {
    padding: 50px 50px;
    background-color: var(--bg-lightGrey);
}

.companies .col.col-4 > .company-logo::after {
    content: "";
    background-color: var(--border-grey);
    position: absolute;
    margin-top: 45px;
    width: 110px;
    height: 2px;
}

/* FREE TRIAL STYLING SECTION */
.free-trial {
    background-color: var(--bg-lightBlue);
    padding: 130px 10px 65px 10px;
}

.free-trial .trial-btn {
    background-color: var(--bg-white);
    display: block;
    text-align: center;
}

.free-trial .trial-title {
    color: var(--bg-wine);
}

/* Q&A STYLING SECTION */
.questions {
    padding: 160px 10px;
}

.questions .question {
    display: flex;
    border-top: 1px solid var(--bg-black);
    line-height: 100px;
}

.questions .question:last-child {
    border-bottom: 1px solid var(--bg-black);
}

.question span {
    margin-right: 40px;
    cursor: pointer;
}

/* FOOTER STYLING SECTION */
.page-footer {
    padding: 45px 20px;
    background-color: var(--bg-black);
    color: var(--text-white);
    position: relative;
}

.page-footer .footer-links {
    padding-top: 55px;
}

.footer-links .links-card {
    padding-bottom: 115px;
}

.footer-links .links-card:first-child {
    border-bottom: 1px solid var(--bg-lightGrey);
}

.footer-links .links-card .links-topic {
    margin-bottom: 37px;
}

.footer-links .links-card .links-list > .link {
    line-height: 40px;
}

.footer-lang .row > * {
    gap: 10px;
    color: var(--text-grey);
}

